Update docs and minor fixes
